Afgerond - Supabase authenticatie toegevoegd.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -33,10 +33,15 @@
   "account.subtitle": "Verwalte deinen Zugang und Status.",
   "account.status.title": "Status",
   "account.status.auth": "Auth: {{state}}",
+  "account.status.authenticated": "Angemeldet als {{email}}",
+  "account.status.emailUnknown": "unbekannt",
+  "account.status.guest": "Gastmodus",
   "account.status.premiumOn": "Premium: an",
   "account.status.premiumOff": "Premium: aus",
   "account.status.adminOn": "Admin: an",
   "account.status.adminOff": "Admin: aus",
+  "account.status.syncOn": "Sync: aktiviert",
+  "account.status.syncOff": "Sync: deaktiviert",
   "account.actions.title": "Aktionen",
   "account.actions.restore": "Käufe wiederherstellen",
   "account.actions.refresh": "Berechtigung aktualisieren",
@@ -44,8 +49,22 @@
   "account.actions.disableAdmin": "Admin deaktivieren",
   "account.actions.login": "Anmelden",
   "account.actions.logout": "Abmelden",
+  "account.sync.title": "Daten-Sync",
+  "account.sync.description": "Schalte die Synchronisation ein, um Fortschritte geräteübergreifend zu sichern.",
+  "account.sync.enable": "Sync aktivieren",
+  "account.sync.disable": "Sync deaktivieren",
+  "account.sync.enabledState": "Sync aktiviert",
+  "account.sync.loginRequired": "Bitte melde dich an, um den Sync zu aktivieren.",
   "account.login.emailLabel": "E-Mail-Adresse",
   "account.login.emailPlaceholder": "name@beispiel.de",
+  "account.login.sendLink": "Link senden",
+  "account.login.linkSent": "Check dein E-Mail-Postfach. Wir haben dir einen Magic Link geschickt.",
+  "account.login.invalidEmail": "Bitte gib eine gültige E-Mail-Adresse ein.",
+  "account.login.sendError": "Link konnte nicht gesendet werden. Versuche es später erneut.",
+  "account.login.waiting": "Warte auf Bestätigung...",
+  "account.login.callbackTitle": "Anmeldung wird bestätigt",
+  "account.login.callbackSubtitle": "Einen Moment bitte.",
+  "account.login.callbackMessage": "Wir richten deinen Login ein. Gleich geht es weiter.",
   "pageTitles.progress": "Fortschritt",
   "pageTitles.more": "Mehr",
   "pageTitles.settings": "Einstellungen",
@@ -236,6 +255,7 @@
   "settings.help.contact.subtitle": "Unser Support-Team hilft gerne.",
   "settings.help.contact.cta": "Support kontaktieren",
   "common.back": "Zurück",
+  "common.loading": "Lädt...",
   "common.ok": "OK",
   "common.close": "Schließen",
   "validation.required": "Dieses Feld ist erforderlich.",
