--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -33,10 +33,15 @@
   "account.subtitle": "Manage your access and status.",
   "account.status.title": "Status",
   "account.status.auth": "Auth: {{state}}",
+  "account.status.authenticated": "Signed in as {{email}}",
+  "account.status.emailUnknown": "unknown",
+  "account.status.guest": "Guest mode",
   "account.status.premiumOn": "Premium: on",
   "account.status.premiumOff": "Premium: off",
   "account.status.adminOn": "Admin: on",
   "account.status.adminOff": "Admin: off",
+  "account.status.syncOn": "Sync: enabled",
+  "account.status.syncOff": "Sync: disabled",
   "account.actions.title": "Actions",
   "account.actions.restore": "Restore purchases",
   "account.actions.refresh": "Refresh entitlement",
@@ -44,8 +49,22 @@
   "account.actions.disableAdmin": "Disable admin",
   "account.actions.login": "Log in",
   "account.actions.logout": "Log out",
+  "account.sync.title": "Data sync",
+  "account.sync.description": "Enable sync to keep your progress backed up across devices.",
+  "account.sync.enable": "Enable sync",
+  "account.sync.disable": "Disable sync",
+  "account.sync.enabledState": "Sync enabled",
+  "account.sync.loginRequired": "Please log in to turn on sync.",
   "account.login.emailLabel": "Email address",
   "account.login.emailPlaceholder": "name@example.com",
+  "account.login.sendLink": "Send magic link",
+  "account.login.linkSent": "Check your inbox. We just sent you a magic link.",
+  "account.login.invalidEmail": "Please enter a valid email address.",
+  "account.login.sendError": "Could not send the link. Please try again.",
+  "account.login.waiting": "Waiting for confirmation...",
+  "account.login.callbackTitle": "Signing you in",
+  "account.login.callbackSubtitle": "This will only take a moment.",
+  "account.login.callbackMessage": "We are completing your login. You will be redirected shortly.",
   "pageTitles.progress": "Progress",
   "pageTitles.more": "More",
   "pageTitles.settings": "Settings",
@@ -236,6 +255,7 @@
   "settings.help.contact.subtitle": "Our support team is ready to help.",
   "settings.help.contact.cta": "Contact support",
   "common.back": "Back",
+  "common.loading": "Loading...",
   "common.ok": "OK",
   "common.close": "Close",
   "validation.required": "This field is required.",
