Afgerond -  FG-11 b bijna afgerond. Alleen account pagina moet nog beter worden gestyled.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -29,31 +29,27 @@
   "notifications.description": "Hier werden in die zukunft Benachrichtigungen und Meldungen angezeigt.",
   "notifications.notesSettingsSaved": "Einstellungen für Notizen wurden gespeichert.",
   "notifications.back": "Zurück",
-  "account.title": "Konto",
-  "account.subtitle": "Verwalte deinen Zugang und Status.",
+  "account.title": "Konto & Zugriff",
+  "account.subtitle": "Verwalte deinen Zugang und deinen Kontostatus.",
   "account.status.title": "Status",
-  "account.status.auth": "Auth: {{state}}",
-  "account.status.authenticated": "Angemeldet als {{email}}",
-  "account.status.emailUnknown": "unbekannt",
+  "account.status.loggedIn": "Angemeldet",
   "account.status.guest": "Gastmodus",
-  "account.status.premiumOn": "Premium: an",
-  "account.status.premiumOff": "Premium: aus",
-  "account.status.adminOn": "Admin: an",
-  "account.status.adminOff": "Admin: aus",
-  "account.status.syncOn": "Sync: aktiviert",
-  "account.status.syncOff": "Sync: deaktiviert",
+  "account.status.premium": "Premium",
+  "account.status.sync": "Sync",
+  "account.status.admin": "Admin",
   "account.actions.title": "Aktionen",
-  "account.actions.restore": "Käufe wiederherstellen",
-  "account.actions.refresh": "Berechtigung aktualisieren",
-  "account.actions.enableAdmin": "Admin aktivieren",
   "account.actions.disableAdmin": "Admin deaktivieren",
-  "account.actions.login": "Anmelden",
-  "account.actions.logout": "Abmelden",
-  "account.sync.title": "Daten-Sync",
-  "account.sync.description": "Schalte die Synchronisation ein, um Fortschritte geräteübergreifend zu sichern.",
+  "account.action.login": "Anmelden",
+  "account.action.logout": "Abmelden",
+  "account.action.restore": "Käufe wiederherstellen",
+  "account.action.refreshEntitlement": "Berechtigung aktualisieren",
+  "account.action.admin": "Admin aktivieren",
+  "account.sync.title": "Daten-Synchronisation",
+  "account.sync.body": "Sichert deine Trainingsdaten geräteübergreifend.",
   "account.sync.enable": "Sync aktivieren",
   "account.sync.disable": "Sync deaktivieren",
   "account.sync.enabledState": "Sync aktiviert",
+  "account.sync.loginCta": "Anmelden, um Sync zu aktivieren",
   "account.sync.loginRequired": "Bitte melde dich an, um den Sync zu aktivieren.",
   "account.login.emailLabel": "E-Mail-Adresse",
   "account.login.emailPlaceholder": "name@beispiel.de",
@@ -254,7 +250,10 @@
   "settings.help.contact.title": "Kommen Sie nicht weiter?",
   "settings.help.contact.subtitle": "Unser Support-Team hilft gerne.",
   "settings.help.contact.cta": "Support kontaktieren",
+  "auth.back": "Zurück",
   "common.back": "Zurück",
+  "common.yes": "Ja",
+  "common.no": "Nein",
   "common.loading": "Lädt...",
   "common.ok": "OK",
   "common.close": "Schließen",
