--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,31 +29,27 @@
   "notifications.description": "Here notifications and alerts will be shown in the future.",
   "notifications.notesSettingsSaved": "Note settings have been saved.",
   "notifications.back": "Back",
-  "account.title": "Account",
-  "account.subtitle": "Manage your access and status.",
+  "account.title": "Account & Access",
+  "account.subtitle": "Manage your access and account status.",
   "account.status.title": "Status",
-  "account.status.auth": "Auth: {{state}}",
-  "account.status.authenticated": "Signed in as {{email}}",
-  "account.status.emailUnknown": "unknown",
+  "account.status.loggedIn": "Signed in",
   "account.status.guest": "Guest mode",
-  "account.status.premiumOn": "Premium: on",
-  "account.status.premiumOff": "Premium: off",
-  "account.status.adminOn": "Admin: on",
-  "account.status.adminOff": "Admin: off",
-  "account.status.syncOn": "Sync: enabled",
-  "account.status.syncOff": "Sync: disabled",
+  "account.status.premium": "Premium",
+  "account.status.sync": "Sync",
+  "account.status.admin": "Admin",
   "account.actions.title": "Actions",
-  "account.actions.restore": "Restore purchases",
-  "account.actions.refresh": "Refresh entitlement",
-  "account.actions.enableAdmin": "Enable admin",
   "account.actions.disableAdmin": "Disable admin",
-  "account.actions.login": "Log in",
-  "account.actions.logout": "Log out",
-  "account.sync.title": "Data sync",
-  "account.sync.description": "Enable sync to keep your progress backed up across devices.",
+  "account.action.login": "Sign in",
+  "account.action.logout": "Sign out",
+  "account.action.restore": "Restore purchases",
+  "account.action.refreshEntitlement": "Refresh access",
+  "account.action.admin": "Enable admin",
+  "account.sync.title": "Data synchronisation",
+  "account.sync.body": "Keeps your training data in sync across devices.",
   "account.sync.enable": "Enable sync",
   "account.sync.disable": "Disable sync",
   "account.sync.enabledState": "Sync enabled",
+  "account.sync.loginCta": "Sign in to enable sync",
   "account.sync.loginRequired": "Please log in to turn on sync.",
   "account.login.emailLabel": "Email address",
   "account.login.emailPlaceholder": "name@example.com",
@@ -254,7 +250,10 @@
   "settings.help.contact.title": "Need assistance?",
   "settings.help.contact.subtitle": "Our support team is ready to help.",
   "settings.help.contact.cta": "Contact support",
+  "auth.back": "Back",
   "common.back": "Back",
+  "common.yes": "Yes",
+  "common.no": "No",
   "common.loading": "Loading...",
   "common.ok": "OK",
   "common.close": "Close",
