Afgerond - Volledig Fase 11. We gaan hierna verder met Fase 12, Billing

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -44,6 +44,10 @@
   "account.action.restore": "Käufe wiederherstellen",
   "account.action.refreshEntitlement": "Berechtigung aktualisieren",
   "account.action.admin": "Admin aktivieren",
+  "account.restore.success": "Käufe wurden wiederhergestellt.",
+  "account.restore.inactive": "Keine Käufe zum Wiederherstellen gefunden.",
+  "account.refresh.success": "Zugriff wurde aktualisiert.",
+  "account.refresh.inactive": "Keine Änderungen am Zugriff gefunden.",
   "account.sync.title": "Daten-Synchronisation",
   "account.sync.body": "Sichert deine Trainingsdaten geräteübergreifend.",
   "account.sync.enable": "Sync aktivieren",
@@ -299,6 +303,7 @@
   "nav.today": "Heute",
   "nav.train": "Trainieren",
   "nav.progress": "Fortschritt",
+  "nav.profile": "Profil",
   "nav.more": "Mehr",
   "nav.comingSoon": "Kommt bald",
   "nav.home": "Start",
