--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,6 +44,10 @@
   "account.action.restore": "Restore purchases",
   "account.action.refreshEntitlement": "Refresh access",
   "account.action.admin": "Enable admin",
+  "account.restore.success": "Purchases restored.",
+  "account.restore.inactive": "No purchases to restore.",
+  "account.refresh.success": "Access refreshed.",
+  "account.refresh.inactive": "No changes to your access found.",
   "account.sync.title": "Data synchronisation",
   "account.sync.body": "Keeps your training data in sync across devices.",
   "account.sync.enable": "Enable sync",
@@ -299,6 +303,7 @@
   "nav.today": "Today",
   "nav.train": "Train",
   "nav.progress": "Progress",
+  "nav.profile": "Profile",
   "nav.more": "More",
   "nav.comingSoon": "Coming soon",
   "nav.home": "Home",
