Afgerond - Bottomsheet aanpassingen ivm premium meldingen

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -681,8 +681,14 @@
   "premium.purchase.failed": "Premium-Aktivierung derzeit nicht verfügbar.",
   "premium.purchase.failedWithReason": "Premium-Aktivierung fehlgeschlagen: {{reason}}",
   "premium.purchase.activated": "Premium aktiviert – alle Trainings freigeschaltet",
+  "premium.purchase.loginHint": "Bitte zuerst anmelden, um Premium zu aktivieren.",
   "premium.gate.locked": "Gesperrtes Training",
   "premium.gate.title": "Premium erforderlich",
+  "premium.gate.body": "{{training}} ist nur mit Premium verfügbar. Bitte zuerst anmelden und Premium aktivieren.",
+  "premium.gate.trainingFallback": "Training",
+  "premium.checkout.success": "Premium aktiv – alle Trainings freigeschaltet.",
+  "premium.checkout.pending": "Zahlung noch nicht bestätigt. Bitte kurz warten.",
+  "premium.checkout.cancelled": "Zahlung abgebrochen.",
   "admin.unlock.title": "Admin-Modus",
   "admin.unlock.body": "Geben Sie den Admin-Code ein, um alle Inhalte freizuschalten.",
   "admin.unlock.codeLabel": "Admin-Code",
