--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -681,8 +681,14 @@
   "premium.purchase.failed": "Premium activation is currently unavailable.",
   "premium.purchase.failedWithReason": "Premium activation failed: {{reason}}",
   "premium.purchase.activated": "Premium activated – all trainings unlocked",
+  "premium.purchase.loginHint": "Please sign in first to activate Premium.",
   "premium.gate.locked": "Locked training",
   "premium.gate.title": "Premium required",
+  "premium.gate.body": "{{training}} is only available with Premium. Please sign in and activate Premium first.",
+  "premium.gate.trainingFallback": "Training",
+  "premium.checkout.success": "Premium active – all trainings unlocked.",
+  "premium.checkout.pending": "Payment not confirmed yet. Please wait a moment.",
+  "premium.checkout.cancelled": "Payment cancelled.",
   "admin.unlock.title": "Admin mode",
   "admin.unlock.body": "Enter the admin code to unlock all content.",
   "admin.unlock.codeLabel": "Admin code",
